--- a/frontend/src/pages/auth/AuthPage.module.css
+++ b/frontend/src/pages/auth/AuthPage.module.css
@@ -5,6 +5,13 @@
     transform: translate(-50%, -50%);
     padding: 10px;
 }
+.card h3, .card h5 {
+    text-align: center;
+}
+
+.card span.error {
+    font-weight: bolder;
+} 
 
 .actions {
     display: flex;
