feat: add user logout and decode token

--- a/frontend/src/components/Navbar.module.css
+++ b/frontend/src/components/Navbar.module.css
@@ -2,8 +2,13 @@
     padding: 1rem !important;
 }
 
+.navbarBrand {
+    margin: 0 !important;
+}
+
 .navbar {
     display: flex;
+    margin-left: 2rem;
     gap: 1rem;
 }
 .navbar li a {
