feat: show home page based on auth

--- a/frontend/src/components/UserItem.module.css
+++ b/frontend/src/components/UserItem.module.css
@@ -8,9 +8,7 @@ button {
     margin: 1rem auto;
 }
 .actions {
-    display: flex;
-    align-items: center;
-    gap: 0.125rem;
+    margin-top: 1rem;
 }
 
 a {
